# trance

./: .gitignore  AGENT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  justfile  package.rs  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml  release.yml
crates/trance-dbus/: Cargo.toml
crates/trance-dbus/src/: client.rs  lib.rs  status.rs
crates/trance-ipc/: Cargo.toml
crates/trance-ipc/src/: ffi_cell.rs  lib.rs  protocol.rs  shm.rs
crates/trance-upscaler/: Cargo.toml
crates/trance-upscaler/src/: cpu.rs  lib.rs
crates/wayland-idle/: Cargo.toml
crates/wayland-idle/src/: lib.rs  monitor.rs
crates/wayland-idle/src/wayland/: handlers.rs  mod.rs  state.rs  thread.rs
crates/wayland-present/: Cargo.toml
crates/wayland-present/src/: appearance.rs  lib.rs  output.rs  presenter.rs
crates/wayland-present/src/overlay/: buffer.rs  mod.rs  thread.rs
crates/wayland-present/src/overlay/handlers/: buffer_objects.rs  input.rs  layer_shell.rs  mod.rs  registry.rs
crates/wayland-present/src/overlay/state/: mod.rs  overlay.rs  types.rs
docs/: BOUNDARIES.md  DBUS.md
idle-api/: Cargo.toml
idle-api/src/: color.rs  lib.rs
idle-cli/: Cargo.toml
idle-cli/assets/: com.system76.CosmicAppletIdle.desktop
idle-cli/src/: doctor_sys.rs  self_update.rs
idle-daemon/: Cargo.toml
idle-daemon/assets/: idle-daemon.service
idle-daemon/src/: config.rs  config_parse.rs  inhibit.rs
trance-api/: Cargo.toml
trance-api/src/: callbacks.rs  caption.rs  color.rs  layout.rs  lib.rs  logo_block.rs  monitor.rs  palette.rs  rng.rs  screensaver.rs  system_info.rs  terminal_cell.rs
trance-api/src/monitor/: mod.rs  tests.rs
trance-applet/: Cargo.toml  justfile  trance-applet.1
trance-applet/debian/: changelog
trance-applet/src/: config.rs  daemon_client.rs  main.rs
trance-applet/src/app/: message.rs  mod.rs  state.rs  update.rs  view.rs
trance-cli/: Cargo.toml  trance.1
trance-cli/debian/: changelog
trance-cli/src/: bug_report.rs  clean.rs  commands.rs  completion.rs  config.rs  doctor.rs  doctor_checks.rs  doctor_env.rs  doctor_fs.rs  doctor_service.rs  interactive.rs  main.rs  self_update.rs  tests.rs  usage.rs
trance-cli/src/completions/: trance.bash  trance.zsh
trance-daemon/: Cargo.toml
trance-daemon/assets/: com.local76.Trance.conf  trance-daemon.1  trance-daemon.desktop  trance-daemon.service
trance-daemon/assets/packaging/: user-service-lib.sh
trance-daemon/debian/: changelog
trance-daemon/rpm/: post.sh  posttrans.sh  preun.sh
trance-daemon/src/: config.rs  config_watcher.rs  daemon.rs  failsafe.rs  idle.rs  inhibit.rs  ipc_runner.rs  lock_monitor.rs  main.rs
trance-daemon/src/controller/: commands.rs  commands_tests.rs  mod.rs  status.rs
trance-daemon/src/daemon/: idle_decision.rs  idle_decision_tests.rs  idle_logic.rs  mod.rs  presentation.rs  runtime.rs
trance-daemon/src/dbus_server/: auth.rs  mod.rs  service.rs  service_helpers.rs  watchers.rs
trance-daemon/src/presentation/: frame_loop.rs  ipc_init.rs  ipc_lifecycle.rs  ipc_raster.rs  ipc_session.rs  layout.rs  mod.rs  overlays.rs  plugin_loop.rs  refresh.rs  topology.rs
trance-plugins-all/: Cargo.toml
trance-plugins-all/debian/: changelog
trance-plugins-all/src/: lib.rs
trance-runner/: Cargo.toml  LINE_LIMITS.md  check_limits.rs
trance-runner/src/: caption_overlay.rs  discovery.rs  fps_overlay.rs  launcher.rs  launcher_proptest.rs  launcher_tests.rs  launcher_trust.rs  lib.rs  platform_helpers.rs  plugin_session.rs  sandbox.rs  trance_runner.rs
trance-runner/src/apps/: mod.rs
trance-runner/src/cell_renderer/: geom.rs  gpu_init.rs  gpu_render.rs  mod.rs  pixels.rs
trance-runner/src/core/: mod.rs
trance-runner/src/core/logo_block/: mod.rs
trance-runner/src/core/logo_block/patterns/: mod.rs  symbols.rs
trance-runner/src/plugin_session/: loading.rs  mod.rs  reloading.rs
trance-runner/src/toolkit/: linux_proc.rs  linux_queries.rs  mod.rs  theme_query.rs
trance-runner/src/toolkit/sys_info/: mod.rs  monitors.rs  theme.rs
trance-tui/: Cargo.toml
trance-tui/assets/: trance-tui.desktop
trance-tui/src/: app.rs  app_tests.rs  lib.rs  main.rs  ui.rs
trance-tui/src/app/: mod.rs  mouse.rs  particles.rs  state.rs
trance-tui/src/ui/: clipboard.rs  helpers.rs  mod.rs
