[workspace]
resolver = "2"
members = [
    "crates/wayland-idle",
    "crates/wayland-present",
    "crates/trance-dbus",
    "crates/trance-upscaler",
    "trance-api",
    "trance-runner",
    "trance-daemon",
    "trance-cli",
    "trance-applet",
    "trance-plugins-all",
    "trance-tui",
]

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link Time Optimization
codegen-units = 1        # Reduce codegen units to maximize size reduction
panic = "abort"          # Remove panic unwinding code
strip = true             # Strip symbols and debuginfo

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
libc = "0.2"
zbus = { version = "5.12", default-features = false, features = ["tokio"] }
trance-api = { path = "trance-api" }
trance-dbus = { path = "crates/trance-dbus" }
trance-runner = { path = "trance-runner" }
trance-upscaler = { path = "crates/trance-upscaler" }
wayland-idle = { path = "crates/wayland-idle" }
wayland-present = { path = "crates/wayland-present" }

# Added in 2026 audit remediation
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-journald = "0.3"
futures-lite = "2"
once_cell = "1"

[workspace.lints.rust]
unused_must_use = "warn"
dead_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
deprecated = "allow"

[workspace.lints.clippy]
# Disable pedantic groups that are noisy or incompatible with FFI code
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_abs_to_unsigned = "allow"
# Allow common helper-method patterns
many_single_char_names = "allow"
ignored_unit_patterns = "allow"
struct_excessive_bools = "allow"
manual_let_else = "allow"
unnecessary_wraps = "allow"
cast_possible_wrap = "allow"
ptr_as_ptr = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
single_match_else = "allow"
items_after_statements = "allow"
borrow_as_ptr = "allow"
unchecked_time_subtraction = "allow"
unnecessary_cast = "allow"
map_unwrap_or = "allow"
type_complexity = "allow"
redundant_closure_for_method_calls = "allow"
io_other_error = "allow"
case_sensitive_file_extension_comparisons = "allow"
if_not_else = "allow"
uninlined_format_args = "allow"
too_many_arguments = "allow"
redundant_else = "allow"
format_push_string = "allow"
too_many_lines = "allow"
unused_async = "allow"
implicit_clone = "allow"
used_underscore_binding = "allow"
manual_range_contains = "allow"
unreadable_literal = "allow"
semicolon_if_nothing_returned = "allow"
# Warn on anti-patterns (target deny-by-default in 0.4 once coverage catches up)
unwrap_used = "allow"
expect_used = "allow"
panic = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"

[profile.release-with-debug]
inherits = "release"
debug = 1
strip = "none"


