[package]
name = "idle-api"
version = "2.3.3"
edition = "2024"
description = "Lightweight shared API definitions, traits, and math utilities for terminal screensaver plugins."
license = "Apache-2.0"

[dependencies]
bytemuck = { version = "1.21", features = ["derive"] }

[dev-dependencies]
proptest = "1"

[[example]]
name = "minimal_saver"
path = "examples/minimal_saver.rs"

