[package]
name = "trance-api"
version = "0.3.52"
edition = "2024"
description = "Lightweight shared API definitions, traits, and math utilities for terminal screensaver plugins."
license = "Apache-2.0"

[dependencies]
bytemuck = { version = "1.21", features = ["derive"] }

[dev-dependencies]
# Reserved for future doctest-only deps

[[example]]
name = "minimal_saver"
path = "examples/minimal_saver.rs"

