[package]
name = "trance-applet"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "COSMIC Desktop panel applet for the trance screensavers"
repository = "https://github.com/local76/trance"

[dependencies]
i18n-embed-fl = "0.10"
rust-embed = "8.11"
tokio = { version = "1.52.0", features = ["full"] }
libc = "0.2"
trance-runner = { path = "../trance-runner" }

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

[package.metadata.deb]
name = "trance-applet"
maintainer = "Screensavers Developer <dev@local76.org>"
extended-description = "Native System76 COSMIC Desktop panel applet for the trance screensaver daemon."
depends = "libc6, trance"
section = "utils"
priority = "optional"
assets = [
    ["target/release/trance-applet", "usr/bin/trance-applet", "755"],
    ["resources/app.desktop", "usr/share/applications/com.system76.CosmicApplet.Trance.desktop", "644"],
    ["resources/app.metainfo.xml", "usr/share/metainfo/com.system76.CosmicApplet.Trance.metainfo.xml", "644"],
    ["resources/icon.png", "usr/share/pixmaps/com.system76.CosmicApplet.Trance.png", "644"]
]

[package.metadata.generate-rpm]
name = "trance-applet"
version = "0.1.4"
release = "1"
arch = "x86_64"
summary = "COSMIC Desktop panel applet for the trance screensavers"
description = "Native System76 COSMIC Desktop panel applet for the trance screensaver daemon."
license = "MIT"
assets = [
    { source = "target/release/trance-applet", dest = "/usr/bin/trance-applet", mode = "755" },
    { source = "resources/app.desktop", dest = "/usr/share/applications/com.system76.CosmicApplet.Trance.desktop", mode = "644" },
    { source = "resources/app.metainfo.xml", dest = "/usr/share/metainfo/com.system76.CosmicApplet.Trance.metainfo.xml", mode = "644" },
    { source = "resources/icon.png", dest = "/usr/share/pixmaps/com.system76.CosmicApplet.Trance.png", mode = "644" }
]
