[package]
name = "trance-applet"
version = "0.3.45"
edition = "2024"
license = "Apache-2.0"
description = "COSMIC Desktop panel applet for the trance screensavers"
repository = "https://github.com/crateria/trance"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
i18n-embed-fl = "0.10"
rust-embed = "8.11"
tokio = { workspace = true }
libc = { workspace = true }
trance-dbus = { workspace = true }
trance-runner = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Applet support
    "applet",
    "applet-token",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }

[package.metadata.deb]
name = "trance-applet"
changelog = "debian/changelog"
copyright = "2026 crateria"
maintainer = "crateria <jerydleuck@gmail.com>"
extended-description = "Native System76 COSMIC Desktop panel applet for the trance screensaver daemon. Optional: install only on COSMIC (not needed for GNOME/KDE/Hyprland — use trance-tui there)."
depends = "libc6, trance"
# Advertise that this package enhances COSMIC; core `trance` only Suggests it.
enhances = "cosmic-session, cosmic-panel"
section = "utils"
priority = "optional"
assets = [
    ["target/release/trance-applet", "usr/bin/trance-applet", "755"],
    ["resources/app.desktop", "usr/share/applications/com.system76.CosmicApplet.Trance.desktop", "644"],
    ["resources/app.metainfo.xml", "usr/share/metainfo/com.system76.CosmicApplet.Trance.metainfo.xml", "644"],
    ["resources/icon.png", "usr/share/pixmaps/com.system76.CosmicApplet.Trance.png", "644"],
    ["trance-applet.1", "usr/share/man/man1/trance-applet.1", "644"]
]

[package.metadata.generate-rpm]
name = "trance-applet"
release = "1"
arch = "x86_64"
summary = "COSMIC Desktop panel applet for the trance screensavers"
description = "Native System76 COSMIC Desktop panel applet for the trance screensaver daemon."
license = "Apache-2.0"
assets = [
    { source = "target/release/trance-applet", dest = "/usr/bin/trance-applet", mode = "755", user = "root", group = "root" },
    { source = "resources/app.desktop", dest = "/usr/share/applications/com.system76.CosmicApplet.Trance.desktop", mode = "644", user = "root", group = "root" },
    { source = "resources/app.metainfo.xml", dest = "/usr/share/metainfo/com.system76.CosmicApplet.Trance.metainfo.xml", mode = "644", user = "root", group = "root" },
    { source = "resources/icon.png", dest = "/usr/share/pixmaps/com.system76.CosmicApplet.Trance.png", mode = "644", user = "root", group = "root" },
    { source = "trance-applet.1", dest = "/usr/share/man/man1/trance-applet.1", mode = "644", user = "root", group = "root" }
]

[package.metadata.generate-rpm.requires]
trance = "*"

# Soft reverse dependency: when cosmic-panel is installed, dnf may offer this
# applet (weak deps). Does not pull the applet onto GNOME/KDE-only systems
# unless they also have cosmic-panel.
[package.metadata.generate-rpm.supplements]
cosmic-panel = "*"
