[package]
name = "trance-cli"
version = "1.0.41"
edition = "2024"
description = "Command-line interface for the trance screensaver daemon"
license = "Apache-2.0"

[[bin]]
name = "trance"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = []
journald = ["dep:tracing-journald"]

[dependencies]
trance-dbus = { workspace = true }
libc = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-journald = { workspace = true, optional = true }

[package.metadata.deb]
name = "trance-cli"
changelog = "debian/changelog"
copyright = "2026 IdleScreen"
maintainer = "IdleScreen <jerydleuck@gmail.com>"
extended-description = "Thin CLI for controlling the trance screensaver daemon over D-Bus."
depends = "libc6, trance"
section = "utils"
priority = "optional"
assets = [
    ["target/release/trance", "usr/bin/trance", "755"],
    ["trance.1", "usr/share/man/man1/trance.1", "644"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/trance", dest = "/usr/bin/trance", mode = "755", user = "root", group = "root" },
    { source = "trance.1", dest = "/usr/share/man/man1/trance.1", mode = "644", user = "root", group = "root" }
]

[package.metadata.generate-rpm.requires]
trance = "*"