[package]
name = "trance-daemon"
version = "0.3.52"
edition = "2024"
description = "Background idle daemon and core package for trance screensavers"
license = "Apache-2.0"

[[bin]]
name = "trance-daemon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
trance-runner = { workspace = true }
trance-api = { workspace = true }
trance-dbus = { workspace = true }
trance-upscaler = { workspace = true }
wayland-idle = { workspace = true }
wayland-present = { workspace = true }
libc = { workspace = true }
signal-hook = "0.4"
zbus = { workspace = true }
futures-lite = "2.6"
tokio = { workspace = true }
anyhow.workspace = true
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-journald = "0.3.2"

[package.metadata.deb]
name = "trance"
changelog = "debian/changelog"
copyright = "2026 crateria"
maintainer = "crateria <jerydleuck@gmail.com>"
extended-description = "Background idle monitoring service for trance screensavers."
# NOTE (2026): `libvulkan1`/`libgl1` dependency removed — the previous
# GPU upscaler was renamed to `trance-upscaler` and is now pure CPU code,
# so neither graphics runtime is required at install time. Kept `dbus`
# (session bus) and `trance-plugin-beams` (default saver).
depends = "libc6, fonts-dejavu-core, trance-plugin-beams, dbus"
# CLI/TUI/plugins are useful on any DE. COSMIC applet is *not* auto-installed:
# GNOME/KDE/etc. users only need trance-tui or trance-cli. COSMIC users:
#   sudo apt install trance-applet
recommends = "trance-plugins-all, trance-cli, trance-tui"
suggests = "trance-applet"
section = "utils"
priority = "optional"
maintainer-scripts = "debian"
# One start path only: systemd user unit (+ D-Bus activation). XDG autostart
# was removed so upgrades/logins do not double-start or fight the unit.
assets = [
    ["target/release/trance-daemon", "usr/bin/trance-daemon", "755"],
    ["assets/trance-daemon.service", "usr/lib/systemd/user/trance-daemon.service", "644"],
    ["assets/io.github.ubermetroid.trance.service", "usr/share/dbus-1/services/io.github.ubermetroid.trance.service", "644"],
    ["assets/io.github.ubermetroid.trance.policy", "usr/share/polkit-1/actions/io.github.ubermetroid.trance.policy", "644"],
    ["assets/trance-daemon.1", "usr/share/man/man1/trance-daemon.1", "644"],
    ["assets/packaging/user-service-lib.sh", "usr/lib/trance/user-service-lib.sh", "644"],
]

[package.metadata.generate-rpm]
name = "trance"
release = "1"
arch = "x86_64"
summary = "Background idle daemon and core package for trance screensavers"
description = "Background idle monitoring service for trance screensavers."
license = "Apache-2.0"
# Soft user-service reload on install/upgrade (never fails the RPM transaction).
post_install_script = "rpm/post.sh"
pre_uninstall_script = "rpm/preun.sh"
# After full transaction: recover if an old package's preun stopped the daemon.
post_trans_script = "rpm/posttrans.sh"
assets = [
    { source = "target/release/trance-daemon", dest = "/usr/bin/trance-daemon", mode = "755", user = "root", group = "root" },
    { source = "assets/trance-daemon.service", dest = "/usr/lib/systemd/user/trance-daemon.service", mode = "644", user = "root", group = "root" },
    { source = "assets/io.github.ubermetroid.trance.service", dest = "/usr/share/dbus-1/services/io.github.ubermetroid.trance.service", mode = "644", user = "root", group = "root" },
    { source = "assets/io.github.ubermetroid.trance.policy", dest = "/usr/share/polkit-1/actions/io.github.ubermetroid.trance.policy", mode = "644", user = "root", group = "root" },
    { source = "assets/trance-daemon.1", dest = "/usr/share/man/man1/trance-daemon.1", mode = "644", user = "root", group = "root" },
    { source = "assets/packaging/user-service-lib.sh", dest = "/usr/lib/trance/user-service-lib.sh", mode = "644", user = "root", group = "root" },
]

[package.metadata.generate-rpm.requires]
dejavu-sans-mono-fonts = "*"
trance-plugin-beams = "*"

[package.metadata.generate-rpm.recommends]
trance-plugins-all = "*"
trance-cli = "*"
trance-tui = "*"
# Rich weak dep: only pull the COSMIC panel applet when COSMIC panel is present.
"(trance-applet if cosmic-panel)" = ""

[package.metadata.generate-rpm.suggests]
# Fallback discovery for hosts without rich-dep resolution.
trance-applet = "*"
