[package]
name = "trance-daemon"
version = "2.2.1"
edition = "2024"
description = "IdleScreen background idle daemon (Wayland screensaver host)"
license = "Apache-2.0"

[[bin]]
name = "idle-daemon"
path = "src/main.rs"

[[bin]]
name = "idlescreen-daemon"
path = "src/main.rs"

[[bin]]
name = "trance-daemon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
trance-runner = { workspace = true }
trance-api = { workspace = true }
trance-dbus = { workspace = true }
trance-upscaler = { workspace = true }
trance-ipc = { path = "../crates/trance-ipc" }
wayland-idle = { workspace = true }
wayland-present = { workspace = true }
libc = { workspace = true }
libloading = "0.8"
signal-hook = "0.4"
zbus = { workspace = true }
futures-lite = "2.6"
tokio = { workspace = true }
anyhow.workspace = true
notify = "8.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-journald = "0.3.2"

[package.metadata.deb]
name = "idle-daemon"
changelog = "debian/changelog"
copyright = "2026 IdleScreen"
maintainer = "IdleScreen <jerydleuck@gmail.com>"
extended-description = "IdleScreen background idle monitoring and screensaver host for Wayland."
# Package rename from `trance`. Plugins renamed to saver-*.
depends = "libc6, fonts-dejavu-core, idle-saver-beams, dbus"
provides = "idle, idlescreen, trance"
replaces = "idlescreen, trance"
conflicts = "idlescreen (<< 2.1.0), trance (<< 2.0.0)"
recommends = "idle-savers, idle-cli"
suggests = "idle-cosmic"
section = "utils"
priority = "optional"
maintainer-scripts = "debian"
assets = [
    ["target/release/idle-daemon", "usr/bin/idle-daemon", "755"],
    ["target/release/idlescreen-daemon", "usr/bin/idlescreen-daemon", "755"],
    ["target/release/trance-daemon", "usr/bin/trance-daemon", "755"],
    ["assets/idle-daemon.service", "usr/lib/systemd/user/idle-daemon.service", "644"],
    ["assets/trance-daemon.service", "usr/lib/systemd/user/trance-daemon.service", "644"],
    ["assets/io.github.ubermetroid.trance.service", "usr/share/dbus-1/services/io.github.ubermetroid.trance.service", "644"],
    ["assets/io.github.ubermetroid.trance.policy", "usr/share/polkit-1/actions/io.github.ubermetroid.trance.policy", "644"],
    ["assets/idle-daemon.1", "usr/share/man/man1/idle-daemon.1", "644"],
    ["assets/packaging/user-service-lib.sh", "usr/lib/idlescreen/user-service-lib.sh", "644"],
]

[package.metadata.generate-rpm]
name = "idle-daemon"
release = "1"
arch = "x86_64"
summary = "IdleScreen background idle daemon"
description = "IdleScreen background idle monitoring and screensaver host for Wayland."
license = "Apache-2.0"
post_install_script = "rpm/post.sh"
pre_uninstall_script = "rpm/preun.sh"
post_trans_script = "rpm/posttrans.sh"
assets = [
    { source = "target/release/idle-daemon", dest = "/usr/bin/idle-daemon", mode = "755", user = "root", group = "root" },
    { source = "target/release/idlescreen-daemon", dest = "/usr/bin/idlescreen-daemon", mode = "755", user = "root", group = "root" },
    { source = "target/release/trance-daemon", dest = "/usr/bin/trance-daemon", mode = "755", user = "root", group = "root" },
    { source = "assets/idle-daemon.service", dest = "/usr/lib/systemd/user/idle-daemon.service", mode = "644", user = "root", group = "root" },
    { source = "assets/trance-daemon.service", dest = "/usr/lib/systemd/user/trance-daemon.service", mode = "644", user = "root", group = "root" },
    { source = "assets/io.github.ubermetroid.trance.service", dest = "/usr/share/dbus-1/services/io.github.ubermetroid.trance.service", mode = "644", user = "root", group = "root" },
    { source = "assets/io.github.ubermetroid.trance.policy", dest = "/usr/share/polkit-1/actions/io.github.ubermetroid.trance.policy", mode = "644", user = "root", group = "root" },
    { source = "assets/idle-daemon.1", dest = "/usr/share/man/man1/idle-daemon.1", mode = "644", user = "root", group = "root" },
    { source = "assets/packaging/user-service-lib.sh", dest = "/usr/lib/idle/user-service-lib.sh", mode = "644", user = "root", group = "root" },
]

[package.metadata.generate-rpm.requires]
dejavu-sans-mono-fonts = "*"
idle-saver-beams = "*"

[package.metadata.generate-rpm.recommends]
idle-cli = "*"

[package.metadata.generate-rpm.suggests]
idle-cosmic = "*"

[package.metadata.generate-rpm.provides]
idle-daemon = "*"
idle = "*"
idlescreen = "*"
trance = "*"

[package.metadata.generate-rpm.obsoletes]
idlescreen = "*"
trance = "*"
