[package]
name = "trance-plugins-all"
version = "0.3.25"
edition = "2024"
description = "Meta package that recommends all official trance screensaver plugins"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[package.metadata.deb]
name = "trance-plugins-all"
changelog = "debian/changelog"
copyright = "2026 UberMetroid"
maintainer = "UberMetroid <jerydleuck@gmail.com>"
extended-description = "Convenience meta package that recommends the optional trance screensaver plugins. The stock beams effect ships with the core trance package."
depends = "trance"
recommends = "trance-plugin-bursts, trance-plugin-chaos, trance-plugin-cosmos, trance-plugin-glyphs, trance-plugin-gnats, trance-plugin-radar, trance-plugin-storm"
section = "utils"
priority = "optional"
assets = []

[package.metadata.generate-rpm]
name = "trance-plugins-all"
release = "1"
arch = "noarch"
summary = "Meta package recommending all official trance screensaver plugins"
description = "Convenience meta package that recommends all official trance screensaver plugins."
license = "Apache-2.0"
assets = []

[package.metadata.generate-rpm.requires]
trance = "*"

[package.metadata.generate-rpm.recommends]
trance-plugin-bursts = "*"
trance-plugin-chaos = "*"
trance-plugin-cosmos = "*"
trance-plugin-glyphs = "*"
trance-plugin-gnats = "*"
trance-plugin-radar = "*"
trance-plugin-storm = "*"