[package]
name = "trance-runner"
version = "0.3.43"
edition = "2024"
description = "Shared runner logic for the terminal screensavers"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
libc = { workspace = true }
trance-api = { workspace = true }
libloading = "0.9"
crossterm = "0.28"
sysinfo = "0.30"
fontdue = "0.9"
trance-upscaler = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "check_limits"
path = "check_limits.rs"
