[package]
name = "trance-runner"
version = "0.3.62"
edition = "2024"
description = "Shared runner logic for the terminal screensavers"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
libc = { workspace = true }
trance-api = { workspace = true }
libloading = "0.9"
crossterm = "0.29"
notify = "8.2.0"
sysinfo = "0.39"
fontdue = "0.9"
trance-upscaler = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
landlock = { workspace = true }
wgpu = "28.0.0"
bytemuck = { version = "1.25.1", features = ["derive"] }
futures-lite = { workspace = true }
