[package]
name = "trance-upscaler"
version = "0.3.52"
edition = "2024"
description = "CPU upscaling for trance screensaver frames"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
bytemuck = { version = "1.21", features = ["derive"] }
trance-api = { path = "../../trance-api" }
tracing.workspace = true