[package]
name = "wayland-idle"
version = "0.3.52"
edition = "2024"
description = "Wayland idle detection via ext-idle-notify-v1"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
libc = { workspace = true }
tracing.workspace = true
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
